--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,1 +1,15 @@
-$main-color:red;
+$main-color:#f92ec6;
+$link-hover-color:#520c40;
+@mixin button-standart{
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    padding:10px;
+    color: azure;
+    letter-spacing:1px;
+    text-transform: uppercase;
+    background-color: $main-color;
+    border-radius:3px;
+    font-size: 12px;
+    border: none;
+    margin: 5px auto 0;
+}
